--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,8 +26,11 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
 
-    // url 이미지 처리를 위해서 추가함.
+    // 이미지 관련 라이브러리.
     implementation 'com.github.bumptech.glide:glide:4.11.0'
+
+    // 마시멜로 버전 이상의 퍼미션 이슈를 위한 라이브러리.
+    implementation "gun0912.ted:tedpermission:2.2.3"
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
