--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,10 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -13,7 +17,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MemoReadActivity"></activity>
+        <activity android:name=".ImageViewerActivity"></activity>
+        <activity android:name=".MemoReadActivity" />
         <activity android:name=".MemoEditActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
@@ -33,8 +38,5 @@
                 android:resource="@xml/filepaths" />
         </provider>
     </application>
-
-    <uses-feature android:name="android.hardware.camera"
-        android:required="false" />
 
 </manifest>
