1. It is almost complete. 2. But it needs to be inspected.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
         android:theme="@style/AppTheme">
         <activity android:name=".ImageViewerActivity"></activity>
         <activity android:name=".MemoReadActivity" />
-        <activity android:name=".MemoEditActivity" />
+        <activity android:name=".MemoEditActivity"
+            android:windowSoftInputMode="adjustPan"/>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
