--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,11 +17,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ImageViewerActivity"></activity>
-        <activity android:name=".MemoReadActivity" />
-        <activity android:name=".MemoEditActivity"
+        <activity android:name=".ReadMemo.ImageViewerActivity"></activity>
+        <activity android:name=".ReadMemo.MemoReadActivity" />
+        <activity android:name=".EditMemo.MemoEditActivity"
             android:windowSoftInputMode="adjustPan"/>
-        <activity android:name=".MainActivity">
+        <activity android:name=".MemoList.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
